cmake_minimum_required(VERSION 3.10)
project(MySocketProject)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(Boost REQUIRED COMPONENTS system serialization)
add_executable(server src/Server.cpp)  
add_executable(client src/Client.cpp)  
target_link_libraries(server ${Boost_LIBRARIES})
target_link_libraries(client ${Boost_LIBRARIES})

if (WIN32)
    target_link_libraries(server ws2_32 Mswsock) 
    target_link_libraries(client ws2_32 Mswsock)
endif()
